--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "js-flexy-schema",
   "version": "1.0.0",
   "description": "",
-  "main": "lib/schemas.js",
+  "main": "lib/index.js",
   "scripts": {
     "clean": "rimraf lib",
     "compile": "babel src --loose --out-dir lib",
-    "test": "mocha --compilers js:babel-core/register",
-    "start": "webpack-dev-server --watch",
+    "test": "jest",
     "prepublish": "npm run test && npm run clean && npm run compile"
   },
   "repository": {
@@ -19,12 +18,12 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-jest": "^23.6.0",
     "babel-plugin-transform-es2015-destructuring": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "chai": "^4.1.2",
     "immutable": "^3.8.2",
-    "mocha": "^5.2.0",
-    "rimraf": "^2.5.2"
+    "rimraf": "^2.5.2",
+    "jest": "^23.6.0"
   }
 }
